Fix up spacing in scss files

--- a/client/scss/home.scss
+++ b/client/scss/home.scss
@@ -1,4 +1,4 @@
-.main {
+main {
 	min-width: 100vw;
 	min-height: calc(100vh - #{$navbar-height};
 	background-image: url("http://4.bp.blogspot.com/-gpiS0MDknmA/VVOreSk0O-I/AAAAAAAAAfc/qDEyLegJdKc/s1600/11260370_10152903038608479_6272696136979344186_n.jpg");
